# jira-generator

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  CLAUDE.md  README.md  ruff.toml
.claude/: SKILLS-INDEX.md  project-config.json  project-config.json.template  settings.json
.claude/skills/jira-cache-server/: SKILL.md  pyproject.toml  requirements.txt  server.py
.claude/skills/jira-cache-server/jira_cache/: __init__.py  cache.py  embeddings.py
.claude/skills/jira-cache-server/tests/: conftest.py  test_cache.py  test_embeddings.py  test_server.py
confluence-templates/: 01-epic-doc.md  02-technical-note.md  03-test-plan.md
jira-templates/: 01-epic.md  02-user-story.md  03-sub-task.md  04-qa-test-case.md
prompts/: 01-senior-product-manager.md  02-senior-product-owner.md  03-senior-technical-analyst.md  04-update-subtask.md  05-senior-qa-analyst.md  CLAUDE.md
references/: CLAUDE.md  checklists.md  shared-config.md  templates.md
scripts/: architecture-page-ids.json  clear-sprint-dates.py  configure-project.py  create-player-architecture-page.py  create-redis-optimization-tickets.py  create-release-notes-1.32.0.py  fix-bep3330-mermaid.py  fix-confluence-165019651-v6.py  fix-table-format.py  fix_table_format.py  git-filter.py  inject-invalidation-acs.py  inject-invalidation-doc.py  link-sprint32-to-release.py  parse-mcp-output.py  redis-datatypes-doc-content.html  redis-tickets-created.json  reformat-bep3330.py  reformat-bep3331.py  reformat-confluence-165019651.py  reformat-confluence-165052419.py  setup.sh  sprint-rank-by-date.py  (+8 more)
(+213 files in other folders)
