[project]
name = "jira-cache-server"
version = "0.2.0"
description = "Local Jira cache MCP server with SQLite + FTS5"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0,<2",
]

[project.optional-dependencies]
embeddings = [
    "sqlite-vec>=0.1.1,<1",
    "sentence-transformers>=2.2.0,<4",
]
test = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["jira_cache", "server"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
